--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -1,4 +1,4 @@
-              <div class="col-lg-6">
+<!--               <div class="col-lg-6">
                 <ul class="list-unstyled">
                   <li>
                     <a href="/posts/android.html">
@@ -22,8 +22,8 @@
                   </li>
                 </ul>
               </div>
-              <!-- /.col-lg-6 -->
-              <div class="col-lg-6">
+               /.col-lg-6 -->
+              <!--<div class="col-lg-6">
                 <ul class="list-unstyled">
                   <li>
                     <a href="/posts/program.html">
@@ -46,5 +46,5 @@
                     </a>
                   </li>
                 </ul>
-              </div>
+              </div> -->
               <!-- /.col-lg-6 -->
