--- a/_includes/friend_links.html
+++ b/_includes/friend_links.html
@@ -1,7 +1,7 @@
-            <ul class="list-unstyled">
+<!--             <ul class="list-unstyled">
               <li>
                 <a href="http://www.panxw.com"><!-- 请保留友情链接，please remain as friend link-->
-                  潘学文博客
+                 <!-- 潘学文博客
                 </a>
               </li>
               <li>
@@ -14,4 +14,4 @@
                   交换友情链接
                 </a>
               </li>				  
-            </ul>
+            </ul> -->
