--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -65,31 +65,30 @@
         <!-- Blog Sidebar Widgets Column -->
         <div class="col-md-4">
           <!-- Blog Categories Well -->
-          <div class="well">
+<!--           <div class="well">
             <h4>
               栏目分类
             </h4>
             <div class="row">
               {% include categories.html %} 
             </div>
-            <!-- /.row -->
-          </div>
+          </div> -->
 		  <!-- Blog Recent Well -->
           <div class="well">
             <h4>
               最新文章
             </h4>
-			<div class="row">
-              {% include recent_posts.html %} 
-			</div>
+      			<div class="row">
+                    {% include recent_posts.html %} 
+      			</div>
           </div>		  
 		  <!-- Blog Links Well -->
-          <div class="well">
+<!--           <div class="well">
             <h4>
               友情链接
             </h4>
             {% include friend_links.html %} 
-          </div>
+          </div> -->
         </div>
       </div>
       <!-- /.row -->
