--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -71,8 +71,9 @@
             </h4>
             <div class="row">
               {% include categories.html %} 
-            </div>
-          </div> -->
+            </div> -->
+            <!-- /.row -->
+          <!-- </div> -->
 		  <!-- Blog Recent Well -->
           <div class="well">
             <h4>
