首页左侧修改

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -82,6 +82,7 @@
       			<div class="row">
                     {% include recent_posts.html %} 
       			</div>
+            <!-- /.row -->
           </div>		  
 		  <!-- Blog Links Well -->
 <!--           <div class="well">
