--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -65,25 +65,24 @@
         <!-- Blog Sidebar Widgets Column -->
         <div class="col-md-4">
           <!-- Blog Categories Well -->
-<!--           <div class="well">
+          <div class="well">
             <h4>
-              栏目分类
+              最新文章
             </h4>
             <div class="row">
-              {% include categories.html %} 
-            </div> -->
+              {% include recent_posts.html %} 
+            </div>
             <!-- /.row -->
-          <!-- </div> -->
+          </div>
 		  <!-- Blog Recent Well -->
-          <div class="well">
+<!--           <div class="well">
             <h4>
               最新文章
             </h4>
       			<div class="row">
                     {% include recent_posts.html %} 
       			</div>
-            <!-- /.row -->
-          </div>		  
+          </div>	 -->	  
 		  <!-- Blog Links Well -->
 <!--           <div class="well">
             <h4>
