--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -1,17 +1,17 @@
-<!--               <div class="col-lg-6">
+              <div class="col-lg-6">
                 <ul class="list-unstyled">
                   <li>
-                    <a href="/posts/android.html">
+                    <a href="/android/index.html">
                       Android开发
                     </a>
                   </li>
                   <li>
-                    <a href="/posts/web.html">
-                      Web建站
+                    <a href="/react/index.html">
+                      React Native
                     </a>
                   </li>
                   <li>
-                    <a href="/posts/read.html">
+                    <a href="/read/index.html">
                       读书笔记
                     </a>
                   </li>
@@ -22,22 +22,22 @@
                   </li>
                 </ul>
               </div>
-               /.col-lg-6 -->
-              <!--<div class="col-lg-6">
+              <!-- /.col-lg-6 -->
+              <div class="col-lg-6">
                 <ul class="list-unstyled">
                   <li>
-                    <a href="/posts/program.html">
-                      软件编程
+                    <a href="/program/index.html">
+                      软件开发
                     </a>
                   </li>                  
-				  <li>
-                    <a href="/posts/linux.html">
+				          <li>
+                    <a href="/linux/index.html">
                       Linux相关
                     </a>
                   </li>
                   <li>
-                    <a href="/posts/other.html">
-                      杂记
+                    <a href="/web/index.html">
+                      Web建站
                     </a>
                   </li>
                   <li>
@@ -46,5 +46,5 @@
                     </a>
                   </li>
                 </ul>
-              </div> -->
+              </div>
               <!-- /.col-lg-6 -->
