--- a/_includes/friendlinks.html
+++ b/_includes/friendlinks.html
@@ -5,11 +5,11 @@
                 </a>
               </li>
               <li>
-                <a href="http://www.manongjc.com" target="_blank" rel="nofollow">
-                  码农教程
+                <a href="https://www.jianshu.com/u/81274d271e6b" target="_blank" rel="nofollow">
+                  简书个人主页
                 </a>
               </li>	
-              <li>
+    <!--           <li>
                 <a href="http://www.youth168.com" target="_blank" rel="nofollow">
                   青年励志网
                 </a>
@@ -18,5 +18,5 @@
                 <a href="http://xujinkai.info/" target="_blank" rel="nofollow"> 
                   JK的博客
                 </a>
-              </li>				  
+              </li>	 -->			  
             </ul>
