--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -1,23 +1,23 @@
               <div class="col-lg-6">
                 <ul class="list-unstyled">
                   <li>
-                    <a href="/android/index.html">
-                      Android开发
+                    <a href="/posts/program.html">
+                      软件编程
                     </a>
                   </li>
                   <li>
-                    <a href="/react/index.html">
-                      React Native
+                    <a href="/posts/web.html">
+                      Web建站
                     </a>
                   </li>
                   <li>
-                    <a href="/read/index.html">
+                    <a href="/posts/linux.html">
+                      Linux相关
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/posts/read.html">
                       读书笔记
-                    </a>
-                  </li>
-                  <li>
-                    <a href="/archives.html">
-                      存档
                     </a>
                   </li>
                 </ul>
@@ -26,18 +26,18 @@
               <div class="col-lg-6">
                 <ul class="list-unstyled">
                   <li>
-                    <a href="/program/index.html">
-                      软件开发
+                    <a href="/posts/other.html">
+                      杂记
                     </a>
                   </li>                  
 				          <li>
-                    <a href="/linux/index.html">
-                      Linux相关
+                    <a href="/tags.html">
+                      Tags
                     </a>
                   </li>
                   <li>
-                    <a href="/web/index.html">
-                      Web建站
+                    <a href="/tags.html">
+                      Tags
                     </a>
                   </li>
                   <li>
