--- a/_includes/recommend_link.html
+++ b/_includes/recommend_link.html
@@ -1,4 +1,4 @@
-            <div class="col-lg-12">
+<!--             <div class="col-lg-12">
               <ul class="list-unstyled">
               <li>
                 <a href="https://promotion.aliyun.com/ntms/act/ambassador/sharetouser.html?userCode=mlv9dicn&productCode=dmspre&utm_source=mlv9dicn" target="_blank" rel="nofollow">
@@ -27,3 +27,4 @@
               </li>			
             </ul>
           </div>
+ -->
