--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,9 +78,9 @@
           </div>
 
           <!-- Side Widget Well -->
-          <div class="well-ad">
+<!--           <div class="well-ad">
             {% include adsense_336x280.html %} 
-          </div>
+          </div> -->
 
 		      <!-- Blog Recent Well -->
           <div class="well">
