--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,11 +77,6 @@
             </div>
           </div>
 
-          <!-- Side Widget Well -->
-<!--           <div class="well-ad">
-            {% include adsense_336x280.html %} 
-          </div> -->
-
 		      <!-- Blog Recent Well -->
           <div class="well">
             <h4>
@@ -90,6 +85,11 @@
             <div class="row">
                     {% include recent_posts.html %} 
             </div>
+          </div>
+
+          <!-- Side Widget Well -->
+          <div class="well-ad">
+            {% include adsense_336x280.html %} 
           </div>
         </div>
       </div>
