--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -85,9 +85,9 @@
           </div>
 
           <!-- Side Widget Well -->
-<!--           <div class="well-ad">
+          <div class="well-ad">
             {% include adsense_336x280.html %} 
-          </div> -->
+          </div>
           
           <!-- Blog Recent Well -->
           <div class="well">
@@ -103,11 +103,11 @@
           <div class="well">
             <h4>
               友情链接
-<!-- 			  <div class="linkme">
+			  <div class="linkme">
 				<a href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=w7SqraWqsa6DsrLtoKyu" target="_blank">
 					<span class="linkme_span">交换链接</span>
 				</a>
-			  </div> -->
+			  </div>
             </h4>
             {% include friendlinks.html %} 
           </div>
