--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,9 +47,9 @@ layout: default
 
 <div style="text-align:center">
 	<div>
-		<b>本文为原创文章，转载请注明出处：</b><a href="https://www.panxw.com">Panxw's Blog</a> » <a href="{{site.url}}{{page.url}}" title="{{page.name}}">{{ page.title }}</a>
+		<b>本文为原创文章，转载请注明出处：</b><!-- <a href="https://www.panxw.com">Panxw's Blog</a> --> » <a href="{{site.url}}{{page.url}}" title="{{page.name}}">{{ page.title }}</a>
 	</div>
-	<div class="friend_alert">
+<!-- 	<div class="friend_alert">
 		如果本站内容帮助到了你，请记得收藏、分享，或打赏支持，谢谢！
 	</div>
 	<div id="donate_div" class="donate_block">
@@ -64,7 +64,7 @@ layout: default
 	</div>
 	<div class="donate_button">
 		<a onclick="donate()">打赏</a>
-	</div>
+	</div> -->
 </div>
 <hr/>
 
